[Mac] Prevent omnibox text bg from drawing over  decoration, focus ring.

The AutocompleteTextFieldEditor draws a background, apparently even when
you call setDrawsBackground:NO (at least during editing). Because of the
1pt spacing set by UX between the security decoration border and the
start of omnibox text, this background started drawing into the
decoration's hover rect. On the right edge it drew into the edge of the
focus ring.

This cl	prevents the AutocompleteTetFieldEditor	from drawing a
background, relying instead on the background drawn by the textfield's
cell. It also changes decorations to be drawn after the cell's interior,
to prevent the background overlap when not editing.

R=avi@chromium.org
BUG=669870,672518

Review-Url: https://codereview.chromium.org/2562863002
Cr-Commit-Position: refs/heads/master@{#437596}

Former-commit-id: 55c13aa9610ea5e5dc91f3d3b21c5cc42d05ff5c